--- a/chess_online.client/src/index.css
+++ b/chess_online.client/src/index.css
@@ -7,11 +7,107 @@ html, body {
     color: black;
 }
 
+.MyBanner, .InfoBanner, .OponentBanner {
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+}
+
+.MyBanner {
+    width: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+}
+
+.StatsBanner {
+    width: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+}
+
+.InfoBanner {
+    width: 300px;
+    flex-direction: column;
+}
+
+.playerPhoto {
+    width: 80px;
+    height: 80px;
+    margin: 20px;
+    border: 3px solid black;
+    border-radius: 8px;
+}
+
+.OponentBanner {
+    width: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+}
+
+.TurnInfo {
+    width: 200px;
+    border: 3px solid black;
+    border-radius: 8px;
+    background-color: darkgray;
+    font-size: 22px;
+    font-weight: bold;
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+}
+
+.InfoBanner h2 {
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+}
+
+.GameBanner {
+    border: 4px solid black;
+    border-radius: 8px;
+    background-color: purple;
+    width: 800px;
+    height: 100px;
+    display: flex;
+    padding: 5px;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+
 .game {
+    border: 4px solid black;
+    border-radius: 8px;
+    background-color: gray;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    width: 820px;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.button-container {
+    border: 4px solid black;
+    border-radius: 8px;
+    background-color: purple;
+    padding: 5px;
+    width: 800px;
+    height: 800px;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    gap: 8px
 }
 
 .lobby {
@@ -31,11 +127,10 @@ html, body {
     justify-content: space-between;
     width: 100%;
     background-color: black;
-    padding-bottom:5px;
+    padding-bottom: 5px;
 }
 
 .lobbyView {
-
     align-items: center;
     justify-content: center;
     display: flex;
@@ -57,6 +152,7 @@ html, body {
     height: 600px !important;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 10px;
     justify-content: flex-start;
     background-color: darkgray;
@@ -65,11 +161,13 @@ html, body {
 body, h1 {
     color: black;
     font-weight: bold;
+    text-align: center;
 }
 
 body, h2 {
     color: black;
     font-weight: bold;
+    text-align: center;
 }
 
 .header {
@@ -137,25 +235,57 @@ body, h2 {
     padding: 20px;
 }
 
-.button-container {
+.profileView {
+    border: 4px solid black;
+    border-radius: 8px;
+    background-color: purple;
     width: 800px;
-    height: 800px;
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(8, 1fr);
-    gap: 8px
+    height: 810px;
+    display: flex;
+    padding: 5px;
+    align-items: center;
+    margin: 0 auto;
+    margin-bottom: 10px;
 }
 
-.stats-container {
+.option {
+    width: 200px;
+    border: 3px solid black;
+    border-radius: 8px;
+    background-color: darkgray;
+    font-size: 22px;
+    font-weight: bold;
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
+}
+
+    .option > h3 {
+        font-size: 22px;
+        font-weight: bold;
+        margin: 0px;
+        padding-bottom: 10px;
+    }
+
+    .option > Button {
+        margin-top: 10px;
+        color: black !important;
+        background-color: gray !important;
+        font-weight: bold !important;
+    }
+
+.profileTab {
     border-style: solid;
     border-radius: 5px;
     width: 350px;
+    height: 800px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: lightgray;
     margin: 0 auto;
+    margin: 5px;
 }
 
 .onlyStats-container {
@@ -198,4 +328,3 @@ body, h2 {
     background-color: gray !important;
     font-weight: bold !important;
 }
-
