--- a/chess_online.client/src/index.css
+++ b/chess_online.client/src/index.css
@@ -239,7 +239,7 @@ body, h2 {
     border: 4px solid black;
     border-radius: 8px;
     background-color: purple;
-    width: 800px;
+    width: 1200px;
     height: 810px;
     display: flex;
     padding: 5px;
@@ -278,6 +278,20 @@ body, h2 {
     border-style: solid;
     border-radius: 5px;
     width: 350px;
+    height: 800px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: lightgray;
+    margin: 0 auto;
+    margin: 5px;
+}
+
+.profileTab_Games {
+    border-style: solid;
+    border-radius: 5px;
+    width: 500px;
     height: 800px;
     display: flex;
     flex-direction: column;
